--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basketball Schedule</title>
+    <title>ตารางแข่งขันบาสเกตบอล</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,32 +12,30 @@
         <div class="card">
             <div class="card-body">
                 <div class="text-center mb-4">
-                    <img src="logo.png" alt="Logo" class="logo">
+                    <img src="logo.png" alt="โลโก้" class="logo">
                 </div>
-                <h1 class="text-center mb-4">Basketball Schedule</h1>
+                <h1 class="text-center mb-4">ตารางแข่งขันบาสเกตบอล</h1>
                 <table class="table table-dark table-hover table-bordered" id="scheduleTable">
                     <thead>
                         <tr>
                             <th>#</th>
-                            <th>Home</th>
+                            <th>ทีม 1</th>
                             <th></th>
-                            <th>Away</th>
-                            <th>Time</th>
-                            <th>Stage</th>
-                            <th>Score</th>
-                            <th>Actions</th>
+                            <th>ทีม 2</th>
+                            <th>เวลา</th>
+                            <th>สถานที่</th>
+                            <th>คะแนน</th>
+                            <th>การกระทำ</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- Rows will be dynamically added here -->
+                        <!-- แถวจะถูกเพิ่มโดยอัตโนมัติที่นี่ -->
                     </tbody>
                 </table>
-                <button class="btn btn-primary mt-3" onclick="promptPassword()">Add Match</button>
+                <button class="btn btn-primary mt-3" onclick="promptPassword()">เพิ่มการแข่งขัน</button>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-    <script src="scripts.js"></script>
+    <script type="module" src="scripts.js"></script>
 </body>
 </html>
